Move AppConfigCtrl and EditAppConfigCtrl together, Fix 'change lgas' for the edit app config flow as well add a test file for app config
Forgot to remove cca

put tests back

Update translations

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "lmis-chrome",
   "version": "0.11.4",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "concat-map": "0.0.1"
+  },
   "devDependencies": {
+    "balanced-match": "^0.2.0",
     "change-case": "^2.1.1",
     "cordova": "^5.0.0",
     "cordova-android": "^4.0.2",
@@ -33,7 +36,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^0.6.0",
     "grunt-jsbeautifier": "^0.2.7",
-    "grunt-jscs": "^0.6.2",
+    "grunt-jscs": "^1.8.0",
     "grunt-karma": "^0.8.3",
     "grunt-karma-coveralls": "^2.5.1",
     "grunt-newer": "^0.7.0",
