--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "dependencies": {},
   "devDependencies": {
     "change-case": "^2.1.1",
+    "cordova": "^5.0.0",
+    "cordova-plugin-crosswalk-webview": "^1.2.0",
+    "cordova-plugin-dialogs": "^1.1.0",
+    "cordova-plugin-google-analytics": "^0.7.1",
+    "cordova-plugin-network-information": "^1.0.0",
+    "cordova-plugin-vibration": "^1.1.0",
+    "cordova-plugin-whitelist": "^1.0.0",
     "eslint-no-exclusive-tests": "^0.1.0",
     "grunt": "^0.4.5",
     "grunt-angular-gettext": "^2.1.0",
