--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-angular-gettext": "^2.1.0",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-bump": "^0.0.15",
+    "grunt-comment-toggler": "^0.2.1",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
