--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
   "license": "ISC",
   "private": true,
   "resolutions": {
-    "d3": "~3.4.1"
+    "d3": "~3.4.1",
+    "angular": "1.2.28"
   }
 }
