--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cordova-plugin-whitelist": "^1.0.0",
     "eslint-no-exclusive-tests": "^0.1.0",
     "grunt": "^0.4.5",
-    "grunt-angular-gettext": "^2.1.0",
+    "grunt-angular-gettext-transifex": "^1.1.0",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-bump": "^0.0.15",
     "grunt-comment-toggler": "^0.2.1",
