--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "lmis-chrome",
   "version": "0.11.4",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "grunt-eha-cordova-build": "ehealthafrica/grunt-eha-cordova-build"
+  },
   "devDependencies": {
     "balanced-match": "^0.2.0",
     "change-case": "^2.1.1",
