--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "localforage": "~1.2.3",
     "pouchdb-authentication": "~0.4.0",
     "angular-eha.login-service": "git@github.com:eHealthAfrica/angular-eha.login-service.git#~0.1.0",
-    "angular-eha.retriable": "git@github.com:eHealthAfrica/angular-eha.retriable.git#~0.1.0"
+    "angular-eha.retriable": "git@github.com:eHealthAfrica/angular-eha.retriable.git#~0.1.0",
+    "angular-eha.online-badge": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1",
