--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_script:
   - bower install
 script:
   - npm test
+after_success:
+  - ./scripts/upload_to_transifex.sh
 notifications:
   flowdock: 232485f7661e644ae5878944c2597042
 before_deploy:
