--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-gettext": "~2.1.0",
     "angular-eha.login-service": "~0.1.0",
     "angular-eha.retriable": "~0.1.0",
-    "angular-eha.online-badge": "~1.0.0"
+    "angular-eha.online-badge": "~1.0.0",
+    "angular-eha.cordova.google-analytics": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1",
