--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "grunt-eha-cordova-build": "ehealthafrica/grunt-eha-cordova-build#2.0.1",
     "balanced-match": "^0.2.0",
     "change-case": "^2.1.1",
     "concat-map": "0.0.1",
@@ -26,6 +25,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eha-cordova-build": "^2.0.1",
     "grunt-eslint": "^0.6.0",
     "grunt-jsbeautifier": "^0.2.7",
     "grunt-jscs": "^1.8.0",
