refactor(bower): use open eha.retriable

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "localforage": "~1.2.3",
     "pouchdb-authentication": "~0.4.0",
     "angular-eha.login-service": "~0.1.0",
-    "angular-eha.retriable": "git@github.com:eHealthAfrica/angular-eha.retriable.git#~0.1.0",
+    "angular-eha.retriable": "~0.1.0",
     "angular-eha.online-badge": "~1.0.0"
   },
   "devDependencies": {
