--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,8 @@ addons:
       - libgnome-keyring-dev
 before_script:
   - npm config set spin false --global
-  - npm install --global bower grunt-cli
   - npm install
-  - bower install
+  - npm run bower install
 script:
   - npm test
 after_success:
