--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "scripts": {
     "postinstall": "bower install",
-    "test": "grunt travis",
+    "test": "grunt test",
     "test-watch": "./node_modules/karma/bin/karma start --autoWatch true --singleRun false"
   },
   "description": "User centered medical supply management",
