--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eHealthAfrica/LMIS-Chrome.git"
+    "url": "https://github.com/eHealthAfrica/move.git"
   },
   "keywords": [
     "lmis",
@@ -92,7 +92,7 @@
   ],
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/eHealthAfrica/LMIS-Chrome/issues"
+    "url": "https://github.com/eHealthAfrica/move/issues"
   },
-  "homepage": "https://github.com/eHealthAfrica/LMIS-Chrome"
+  "homepage": "https://github.com/eHealthAfrica/move"
 }
