--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "change-case": "^2.1.1",
     "concat-map": "0.0.1",
     "cordova-android": "^4.0.2",
-    "eslint-no-exclusive-tests": "^0.1.0",
+    "eslint": "^0.24.1",
+    "eslint-config-tlvince": "^1.2.0",
     "grunt": "^0.4.5",
     "grunt-angular-gettext-transifex": "^1.1.0",
     "grunt-autoprefixer": "^1.0.0",
@@ -23,13 +24,9 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.7.1",
-    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eha-cordova-build": "^2.3.0",
-    "grunt-eslint": "^0.6.0",
-    "grunt-jsbeautifier": "^0.2.7",
-    "grunt-jscs": "^1.8.0",
     "grunt-karma": "^0.8.3",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.3.2",
@@ -41,7 +38,6 @@
     "grunt-usemin": "^2.3.0",
     "grunt-wiredep": "^1.8.0",
     "grunt-wiredep-copy": "^0.1.0",
-    "jshint-stylish": "^0.4.0",
     "karma": "^0.12.21",
     "karma-jasmine": "^0.1.5",
     "karma-ng-html2js-preprocessor": "^0.1.0",
@@ -65,7 +61,9 @@
     "node": "0.10.x"
   },
   "scripts": {
+    "eslint": "eslint *.js app/scripts/**/*.js test/**/*.js",
     "postinstall": "bower install",
+    "pretest": "npm run eslint || true",
     "test": "grunt test",
     "test-watch": "./node_modules/karma/bin/karma start --autoWatch true --singleRun false"
   },
