chore: add npm start script

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint": "eslint *.js app/scripts/**/*.js test/**/*.js",
     "postinstall": "bower install",
     "pretest": "npm run eslint || true",
+    "start": "grunt serve",
     "test": "grunt test",
     "test-watch": "./node_modules/karma/bin/karma start --autoWatch true --singleRun false"
   },
