--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-ng-constant": "^1.0.0",
     "grunt-protractor-runner": "^1.1.0",
     "grunt-remove-logging": "^0.2.0",
-    "grunt-rev": "^0.1.0",
+    "grunt-filerev": "^2.3.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.3.0",
     "grunt-wiredep": "^1.8.0",
