--- a/bower.json
+++ b/bower.json
@@ -10,13 +10,13 @@
     "angular-pouchdb": "~3.0.0",
     "bootstrap-theme-cosmo": "tlvince/bootstrap-theme-cosmo#4c161a6bf5bebe0ecfbef0771e053c8c5c2698c9",
     "angularjs-nvd3-directives": "~0.0.7",
-    "angular-growl-v2": "~0.6.1",
     "angular-animate": "~1.4.1",
     "angular-gettext": "~2.1.0",
     "angular-eha.login-service": "~0.1.0",
     "angular-eha.retriable": "~0.1.0",
     "angular-eha.online-badge": "~1.0.0",
-    "angular-eha.cordova.google-analytics": "~1.2.1"
+    "angular-eha.cordova.google-analytics": "~1.2.1",
+    "angular-toastr": "~1.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1",
