--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "pretest": "npm run eslint",
     "start": "grunt serve",
     "test": "grunt test",
-    "test-watch": "./node_modules/karma/bin/karma start --autoWatch true --singleRun false"
+    "test-watch": "karma start --autoWatch true --singleRun false"
   },
   "description": "User centered medical supply management",
   "main": "Gruntfile.js",
