--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "cordova-plugin-vibration": "^1.1.0",
     "cordova-plugin-whitelist": "^1.0.0",
     "device-information": "https://github.com/vliesaputra/DeviceInformationPlugin",
-    "phonegap-sms": "https://github.com/aharris88/phonegap-sms-plugin.git",
+    "cordova-sms-plugin": "https://github.com/cordova-sms/cordova-sms-plugin.git",
     "local-notifications": "https://github.com/sapk/cordova-plugin-local-notifications.git"
   },
   "engines": {
