chore: pin Cordova plugins
Fork device-information so that a tag can be set. However, it's unmaintained and
ideally, a replacement should be found.

Remove unused local-notifications. This was included when we were researching
background service implementations, in our case for background stock count sync,
which is still an open issue (#10) and should be revisited using
eHealthAfrica/cordova-plugin-background-sync.

Closes #206.

--- a/package.json
+++ b/package.json
@@ -52,9 +52,8 @@
     "cordova-plugin-network-information": "^1.0.0",
     "cordova-plugin-vibration": "^1.1.0",
     "cordova-plugin-whitelist": "^1.0.0",
-    "device-information": "https://github.com/vliesaputra/DeviceInformationPlugin",
-    "cordova-sms-plugin": "https://github.com/cordova-sms/cordova-sms-plugin.git",
-    "local-notifications": "https://github.com/sapk/cordova-plugin-local-notifications.git"
+    "device-information": "https://github.com/tlvince/DeviceInformationPlugin.git#1.0.0",
+    "cordova-sms-plugin": "https://github.com/cordova-sms/cordova-sms-plugin.git#v0.1.5"
   },
   "engines": {
     "node": "0.10.x"
