--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-eha.online-badge": "~1.0.0",
     "angular-eha.cordova.google-analytics": "~1.2.1",
     "angular-toastr": "~1.5.0",
-    "angular-eha.counter": "~1.2.0"
+    "angular-eha.counter": "~1.2.0",
+    "angular-eha.login-dialog": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1",
