--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,17 @@
   "name": "lmis-chrome",
   "version": "0.12.0",
   "dependencies": {
-    "angular": "1.4.1",
+    "angular": "~1.4.1",
     "angular-bootstrap": "0.12.0",
     "font-awesome": "~4.1.0",
     "angular-ui-router": "0.2.10",
     "bootstrap-css-only": "~3.1.0",
-    "angular-pouchdb": "3.0.0",
+    "angular-pouchdb": "~3.0.0",
     "bootstrap-theme-cosmo": "tlvince/bootstrap-theme-cosmo#4c161a6bf5bebe0ecfbef0771e053c8c5c2698c9",
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-animate": "~1.4.1",
     "angular-gettext": "~2.1.0",
-    "angular-eha.login-service": "1.0.2",
+    "angular-eha.login-service": "~1.0.2",
     "angular-eha.retriable": "~0.1.0",
     "angular-eha.online-badge": "~1.0.0",
     "angular-eha.cordova.google-analytics": "~1.2.1",
@@ -47,6 +47,7 @@
     "angular-pouchdb": "~3.0.0",
     "angular": "~1.4.1",
     "d3": "~3.4.1",
-    "pouchdb": "~4.0.0"
+    "pouchdb": "~4.0.0",
+    "angular-eha.login-service": "~1.0.2"
   }
 }
