--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-animate": "~1.4.1",
     "angular-gettext": "~2.1.0",
-    "angular-eha.login-service": "~1.0.1",
+    "angular-eha.login-service": "https://github.com/eHealthAfrica/angular-eha.login-service.git#~1.0.1",
     "angular-eha.retriable": "~0.1.0",
     "angular-eha.online-badge": "~1.0.0",
     "angular-eha.cordova.google-analytics": "~1.2.1",
