--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-standard": "^4.3.1",
     "grunt": "^0.4.5",
     "grunt-angular-eha-fixtures": "^1.0.0",
+    "grunt-angular-gettext": "^2.1.14",
     "grunt-angular-gettext-transifex": "^1.1.0",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-bump": "^0.0.15",
