--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.12.1",
   "dependencies": {
     "angular": "~1.4.1",
-    "angular-bootstrap": "0.12.0",
+    "angular-bootstrap": "^2.2.0",
     "font-awesome": "~4.1.0",
     "angular-ui-router": "0.2.10",
     "bootstrap-css-only": "~3.1.0",
@@ -17,8 +17,7 @@
     "angular-eha.online-badge": "~1.0.0",
     "angular-eha.cordova.google-analytics": "~1.2.1",
     "angular-toastr": "~1.5.0",
-    "angular-eha.counter": "~1.2.0",
-    "angular-eha.login-dialog": "~1.0.2"
+    "angular-eha.counter": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1",
@@ -48,6 +47,6 @@
     "angular": "~1.4.1",
     "d3": "~3.4.1",
     "pouchdb": "~4.0.0",
-    "angular-bootstrap": "0.12.0"
+    "angular-bootstrap": "^2.2.0"
   }
 }
