--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "Musa Musa <musa.musa@ehealthnigeria.org>",
     "Justin Lorenzon <justin.lorenzon@ehealthnigeria.org>",
     "Karl Westin <karl.westin@ehealthnigeria.org>",
-    "Femi Oni <oluwafemi.oni@ehealthnigeria.org>"
+    "Femi Oni <oluwafemi.oni@ehealthnigeria.org>",
+    "Lord-Mallam Nugwan <lord-mallam.nugwan@ehealthnigeria.org>"
   ],
   "license": "Apache-2.0",
   "bugs": {
